--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -140,6 +140,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvPublishedAt">
 
         <TextView
+            android:id="@+id/tvSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/theme"
