--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="4dp"/>
-            <stroke android:color="@color/purple_500"
+            <stroke android:color="@color/theme"
                 android:width="2dp"/>
         </shape>
     </item>
